--- a/cv/index.html
+++ b/cv/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
+<a class="pdf-wrapper" href="cv.pdf" target="_blank">
+    Printable PDF
+</a>
 <h1 id="me">Joe Carter</h1>
 <div class="bio">
     <p>I am looking for Software Engineering orientated roles. My current fields of expertise are mostly consisting
@@ -13,48 +16,44 @@
         stack.</p>
 </div>
 <h2>Personal Details</h2>
-<table class="details">
-    <tr>
-        <td align="right">Location:</td>
-        <td>South West Wales (Pembrokeshire), <strong>Looking to relocate.</strong></td>
-    </tr>
-    <tr>
-        <td align="right">Phone:</td>
-        <td>Available on request</td>
-    </tr>
-    <tr>
-        <td align="right">Email:</td>
-        <td><a href="mailto:joe@josephcarter.co.uk">joe@josephcarter.co.uk</a></td>
-    </tr>
-    <tr>
-        <td>&nbsp;</td>
-    </tr>
-    <tr>
-        <td align="right">Website:</td>
-        <td><a href="http://josephcarter.co.uk">http://josephcarter.co.uk</a></td>
-    </tr>
-    <tr>
-        <td align="right">LinkedIn:</td>
-        <td><a href="https://uk.linkedin.com/pub/joseph-carter/65/a28/269">https://uk.linkedin.com/pub/joseph-carter/65/a28/269</a>
-        </td>
-    </tr>
-    <tr>
-        <td align="right">Github:</td>
-        <td><a href="https://github.com/ylt">https://github.com/ylt</a></td>
-    </tr>
-</table>
-
-
+<div class="contact-wrapper">
+    <table class="contact">
+        <tr>
+            <td align="right">Location:</td>
+            <td>South West Wales (Pembrokeshire), <strong>Looking to relocate.</strong></td>
+        </tr>
+        <tr>
+            <td align="right">Phone:</td>
+            <td>Available on request</td>
+        </tr>
+        <tr>
+            <td align="right">Email:</td>
+            <td><a href="mailto:joe@josephcarter.co.uk">joe@josephcarter.co.uk</a></td>
+        </tr>
+    </table>
+    <table class="contact">
+        <tr>
+            <td align="right">Website:</td>
+            <td><a href="http://josephcarter.co.uk">http://josephcarter.co.uk</a></td>
+        </tr>
+        <tr>
+            <td align="right">LinkedIn:</td>
+            <td><a href="https://linkedin.com/in/theupperquartile">https://linkedin.com/in/theupperquartile</a>
+            </td>
+        </tr>
+        <tr>
+            <td align="right">Github:</td>
+            <td><a href="https://github.com/ylt">https://github.com/ylt</a></td>
+        </tr>
+    </table>
+    <div class="clear"></div>
+</div>
 
 <h2>Skills</h2>
 <table class="details">
     <tr>
         <td>Sysadmin:</td>
         <td>Debian, Ubuntu, CentOS</td>
-    </tr>
-    <tr>
-        <td>Java:</td>
-        <td>Maven, Gradle, Swing, Spring, JUnit, Mockito</td>
     </tr>
     <tr>
         <td>Node.js:</td>
@@ -65,7 +64,7 @@
         <td> ES 2016 (babel), typescript, livescript, coffeescript, dart, Mocha, Angular, Chai</td>
     </tr>
     <tr>
-        <td>AWS:</td>
+        <td>AWS:</td>q
         <td> IAM, VPC, EC2, Route53, S3,</td>
     </tr>
     <tr>
@@ -85,15 +84,18 @@
         <td> Javascript/ECMASCRIPT 5 + 6, Python, Java, Bash, C, C++, C\#</td>
     </tr>
     <tr>
+        <td>Java:</td>
+        <td>Maven, Gradle, Swing, Spring, JUnit, Mockito</td>
+    </tr>
+    <tr>
         <td>Android:</td>
-        <td> Xamarin, Kotlin/Cordova, Java, Firebase, Bluetooth</td>
+        <td> Xamarin, Kotlin/Cordova, Java, Firebase</td>
     </tr>
     <tr>
         <td>Other Technologies:</td>
-        <td> Apache, Nginx, Lighttpd, PHPUnit, Git, SVN</td>
+        <td>Apache, Nginx, Lighttpd, PHPUnit, Git, SVN</td>
     </tr>
 </table>
-
 
 
 <h2>Education</h2>
@@ -157,7 +159,6 @@
     </div>
 
 </div>
-
 
 
 <h2>Work Experience</h2>
